--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -1,4 +1,4 @@
-<section id="services">
+<section id="services" class="hidden" >
 <!-- Page Content -->
 {% for post in site.posts reversed %}
   {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
@@ -50,3 +50,33 @@
     {% endif %}
 {% endfor %}
 </section>
+<div id="blog" class="content-section-a">
+		<div class="row">
+			<h1 class="centered">POSTIMET E FUNDIT</h1>
+			<hr>
+			<br>
+		<div class="col-lg-12">
+			<div class="container text-center">
+			<h2>Blog post 1</h2>
+			<p>Lorem ipsum trololo. This is the last blog post.</p>
+			</div>
+		</div>
+		<div class="col-lg-12">
+			<div class="container text-center">
+			<h2>Blog post 2</h2>
+			<p>Lorem ipsum trololo. This is the pre-last blog post.</p>
+			</div>
+		</div>
+		<div class="col-lg-12">			
+			<div class="container text-center">
+			<h2>Blog post 3</h2>
+			<p>Lorem ipsum trololo. This is the pre-pre-last blog post.</p>						
+			</div>
+		</div>
+		<div class="col-lg-12">			
+			<div class="container text-center">
+			<a href="#">Arkiva</a>
+			</div>	
+		</div>					
+		</div><!-- /row -->	
+</div>
