--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -89,7 +89,7 @@ h6 {
 }
 
 .content-section-a {
-    padding: 50px 0;
+    padding: 25px 0;
     background-color: #f8f8f8;
 }
 
@@ -157,10 +157,11 @@ h6 {
 }
 
 footer {
-    padding: 50px 0;
-    background-color: #f8f8f8;
+    padding: 33px 0;
+    background-color: #dadada;
 }
 
 p.copyright {
     margin: 15px 0 0;
 }
+
