--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
     <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
-	<link href="backup/css/main.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
 	<link href="backup/style.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
