--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
     <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
-	<link href="backup/css/main.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
