--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,13 +15,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">  
             	<li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="#blog">Blog</a>
                 </li>            
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#projekte">Projekte</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#about">Rreth faqes</a>
                 </li>
             </ul>
         </div>
@@ -41,8 +41,7 @@
 					<div class="intro-message">
 						<h1>{{ page.title }}</h1>
 						<h3>{{ page.subTitle }}</h3>
-						<hr class="intro-divider">
-						<ul class="list-inline intro-social-buttons">
+						<ul class="hidden list-inline intro-social-buttons">
 							{% for social in site.social %}
 							<li>
 								<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
