--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -55,19 +55,21 @@
 			<h1 class="centered">POSTIMET E FUNDIT</h1>
 			<hr>
 			<br>
+{% for post in site.posts reversed %}
 		<div class="col-lg-12">
 			<div class="container text-center">
-			<h2>Blog post 1</h2>
-			<p>Lorem ipsum trololo. This is the last blog post.</p>
+			<h2>{{ post.title }}</h2>
+			<p>{{ post.content }}</p>
 			</div>
 		</div>
-		<div class="col-lg-12">
+{% endfor %}		
+		<div class="col-lg-12 hidden">
 			<div class="container text-center">
 			<h2>Blog post 2</h2>
 			<p>Lorem ipsum trololo. This is the pre-last blog post.</p>
 			</div>
 		</div>
-		<div class="col-lg-12">			
+		<div class="col-lg-12 hidden">			
 			<div class="container text-center">
 			<h2>Blog post 3</h2>
 			<p>Lorem ipsum trololo. This is the pre-pre-last blog post.</p>						
