--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
 					<div class="intro-message">
 						<h1>{{ page.title }}</h1>
 						<h3>{{ page.subTitle }}</h3>
-						<ul class="hidden list-inline intro-social-buttons">
+						<ul class="list-inline intro-social-buttons">
 							{% for social in site.social %}
 							<li>
 								<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.icon }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
