--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -58,7 +58,7 @@
 {% for post in site.posts reversed %}
 		<div class="col-lg-12">
 			<div class="container text-center">
-			<h2><a href="{{ post.url }}">{{ post.title }}</h2>
+			<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 			<p>{{ post.content }}</p>
 			<p>{{ post.category }}</p>
 			</div>
