--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -43,7 +43,7 @@
 				<h2>Lorem Ipsum</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.</p>
-				<p><a href="#" class="icon icon-link">Lexo më shumë</a></p>
+				<p><a href="about/" class="icon icon-link">Lexo më shumë</a></p>
 				<br>
 			</div>
 		</div><!-- /col -->
