--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -9,7 +9,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#home">{{ site.title }}</a>
+			<!-- Duhet t'i editosh te gjitha linqet dhe includet qe te heqesh /reclaim/ pasi te blesh domainin -->
+            <a class="navbar-brand page-scroll" href="/reclaim/">{{ site.title }}</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -21,7 +22,7 @@
                     <a class="page-scroll" href="#projekte">Projekte</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about">Rreth faqes</a>
+                    <a class="page-scroll" href="/reclaim/about.html">Rreth faqes</a>
                 </li>
             </ul>
         </div>
@@ -29,31 +30,3 @@
     </div>
     <!-- /.container -->
 </nav>
-<section id="home">
-<!-- Header -->
-	<div class="intro-header">
-
-		<div class="container">
-
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="intro-message">
-						<h1>{{ page.title }}</h1>
-						<h3>{{ page.subTitle }}</h3>
-						<ul class="list-inline intro-social-buttons">
-							{% for social in site.social %}
-							<li>
-								<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.icon }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
-							</li>
-							{% endfor %}
-						</ul>
-					</div>
-				</div>
-			</div>
-
-		</div>
-		<!-- /.container -->
-
-	</div>
-	<!-- /.intro-header -->
-</section>
