Ndryshime nga shtepia, about, p5, etj etj

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,6 +6,7 @@
   <body>
 	{% include topmenu.html %}
 	<div class="wrapper">
+	{% include about_animation.html %}
     <!-- content start -->
 
     <div class="row">
