--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -157,8 +157,12 @@ h6 {
 }
 
 footer {
-    padding: 33px 0;
-    background-color: #dadada;
+    /*padding: 33px 0;**/
+	min-height: 50px;
+    background-color: #b7b7b7;
+	position: absolute;
+	bottom:0;
+	width:100%;
 }
 
 p.copyright {
