--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,10 +15,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">  
             	<li>
-                    <a class="page-scroll" href="#blog">Blog</a>
-                </li>            
-                <li>
                     <a class="page-scroll" href="#projekte">Projekte</a>
+                </li>            
+                <li>                    
+					<a class="page-scroll" href="#blog">Blog</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#about">Rreth faqes</a>
@@ -29,6 +29,7 @@
     </div>
     <!-- /.container -->
 </nav>
+<div class="wrapper">
 <section id="home">
 <!-- Header -->
 	<div class="intro-header">
