--- a/css/main.css
+++ b/css/main.css
@@ -637,8 +637,9 @@ a:after {
 }
 
 /*********stile te shtuara nga une, Grigor Malo ******************/
-.fac { font-size: 23px; margin: 0 7px; }
-.wrapper { min-height:100%; position: relative;}
+.fac { font-size: 23px; margin: 0 7px;}
+.wrapper { min-height:100%; position: relative; display:block;}
 .customDiv { width: 100%; text-align:center; font-size:33px;}
+#about {margin-bottom:55px;}
 
 
