--- a/_includes/about_animation.html
+++ b/_includes/about_animation.html
@@ -1,3 +1,3 @@
-<div style="dispaly:block; position:absolute; top:0; width:100%; min-height:300px;">
+<div style="dispaly:block; position:relative; top:0; width:100%; min-height:300px;">
 <script src="about_animation.js"></script>
 </div>
