--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -22,7 +22,7 @@
 					<a class="page-scroll" href="#blog">Blog</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/reclaim/about.html">Rreth faqes</a>
+                    <a class="page-scroll" href="/reclaim/about">Rreth faqes</a>
                 </li>
             </ul>
         </div>
