--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,7 +9,7 @@
 	{% include about_animation.html %}
     <!-- content start -->
 
-    <div class="row">
+    <div class="container">
       <div class="col-sm-12">
         {{ content }}
       </div>
