Consolas font and left aligned

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,13 +22,13 @@
 
 	</div>
 </section>
-<div class="container" id="about" name="team">
-	<div class="row">
+<div class="row">
+<div class="container lefty" id="about" name="team">
 			<h1 class="centered">RRETH FAQES</h1>
 			<hr>
 			<br>
 			<br>
-		<div class="blog-bg col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+		<div class="blog-bg col-lg-10 col-md-10 col-sm-12 col-xs-12">
 			<div class="col-lg-4 centered">
 			<br>
 				<h5>Autori</h5>
@@ -47,7 +47,7 @@
 				<br>
 			</div>
 		</div><!-- /col -->
-	</div>
+</div>
 </div>
 <br/>
 <!-- /.banner -->
