--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 <footer>
-    <div class="container">
+    <div class="container lefty">
         <div class="row">
             <div class="col-md-12 text-center">
                 <p class="copyright text-muted">
