--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -52,34 +52,36 @@
 </section>
 <div id="blog" class="content-section-a">
 		<div class="row">
-			<h1 class="centered">POSTIMET E FUNDIT</h1>
-			<hr>
-			<br>
-{% for post in site.posts reversed %}
-		<div class="col-lg-12">
-			<div class="container text-center">
-			<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-			<p>{{ post.content }}</p>
-			<p>{{ post.category }}</p>
+			<div class="container lefty">
+				<h1 class="left">POSTIMET E FUNDIT</h1>
+				<hr>
+				<br>
+	{% for post in site.posts reversed %}
+			<div class="col-lg-12">
+				<div class="container text-left">
+				<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+				<p>{{ post.content }}</p>
+				<p>{{ post.category }}</p>
+				</div>
 			</div>
-		</div>
-{% endfor %}		
-		<div class="col-lg-12 hidden">
-			<div class="container text-center">
-			<h2>Blog post 2</h2>
-			<p>Lorem ipsum trololo. This is the pre-last blog post.</p>
+	{% endfor %}		
+			<div class="col-lg-12 hidden">
+				<div class="container text-center">
+				<h2>Blog post 2</h2>
+				<p>Lorem ipsum trololo. This is the pre-last blog post.</p>
+				</div>
 			</div>
-		</div>
-		<div class="col-lg-12 hidden">			
-			<div class="container text-center">
-			<h2>Blog post 3</h2>
-			<p>Lorem ipsum trololo. This is the pre-pre-last blog post.</p>						
+			<div class="col-lg-12 hidden">			
+				<div class="container text-center">
+				<h2>Blog post 3</h2>
+				<p>Lorem ipsum trololo. This is the pre-pre-last blog post.</p>						
+				</div>
 			</div>
-		</div>
-		<div class="col-lg-12">			
-			<div class="container text-center">
-			<a href="#">Arkiva</a>
+			<div class="col-lg-12">			
+				<div class="container text-left">
+				<a href="#">Arkiva</a>
+				</div>	
 			</div>	
-		</div>					
+			</div>		
 		</div><!-- /row -->	
 </div>
