Consolas font and left aligned 2

--- a/_includes/projekte.html
+++ b/_includes/projekte.html
@@ -1,57 +1,56 @@
-	<div class="container no-touch" id="projekte" name="projekte">
-		<br>
-			<div class="row">
-				<br>
-				<h1 class="centered">PROJEKTE</h1>
-				<hr>
-				<br>
-				<br>
-			</div><!-- /row -->
-		<div class="container">
-			<div class="row">	
-			
-				<!-- PORTFOLIO IMAGE 1 -->
-				<div class="col-md-4 ">
-			    	<div class="grid mask">
-						<figure>
-							<img class="img-responsive" src="img/portfolio/folio06.jpg" alt="">
-							<figcaption>
-								<h5>PROJECT 1</h5>
-								<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
-							</figcaption><!-- /figcaption -->
-						</figure><!-- /figure -->
-			    	</div><!-- /grid-mask -->
-				</div><!-- /col -->
-				
-				
-				<!-- PORTFOLIO IMAGE 2 -->
-				<div class="col-md-4">
-			    	<div class="grid mask">
-						<figure>
-							<img class="img-responsive" src="img/portfolio/folio07.jpg" alt="">
-							<figcaption>
-								<h5>PROJECT 2</h5>
-								<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
-							</figcaption><!-- /figcaption -->
-						</figure><!-- /figure -->
-			    	</div><!-- /grid-mask -->
-				</div><!-- /col -->
-				
-				<!-- PORTFOLIO IMAGE 3 -->
-				<div class="col-md-4">
-			    	<div class="grid mask">
-						<figure>
-							<img class="img-responsive" src="img/portfolio/folio09.jpg" alt="">
-							<figcaption>
-								<h5>PROJECT 3</h5>
-								<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
-							</figcaption><!-- /figcaption -->
-						</figure><!-- /figure -->
-			    	</div><!-- /grid-mask -->
-				</div><!-- /col -->
-			</div><!-- /row -->
+<div class="row no-touch" id="projekte" name="projekte">
+	<br>
+	<div class="container lefty">
+			<br>
+			<h1 class="centered">PROJEKTE</h1>
+			<hr>
+			<br>
+			<br>
 
-			<br>
-			<br>
+		<div class="row">	
+		
+			<!-- PORTFOLIO IMAGE 1 -->
+			<div class="col-md-4 ">
+				<div class="grid mask">
+					<figure>
+						<img class="img-responsive" src="img/portfolio/folio06.jpg" alt="">
+						<figcaption>
+							<h5>PROJECT 1</h5>
+							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+						</figcaption><!-- /figcaption -->
+					</figure><!-- /figure -->
+				</div><!-- /grid-mask -->
+			</div><!-- /col -->
+			
+			
+			<!-- PORTFOLIO IMAGE 2 -->
+			<div class="col-md-4">
+				<div class="grid mask">
+					<figure>
+						<img class="img-responsive" src="img/portfolio/folio07.jpg" alt="">
+						<figcaption>
+							<h5>PROJECT 2</h5>
+							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+						</figcaption><!-- /figcaption -->
+					</figure><!-- /figure -->
+				</div><!-- /grid-mask -->
+			</div><!-- /col -->
+			
+			<!-- PORTFOLIO IMAGE 3 -->
+			<div class="col-md-4">
+				<div class="grid mask">
+					<figure>
+						<img class="img-responsive" src="img/portfolio/folio09.jpg" alt="">
+						<figcaption>
+							<h5>PROJECT 3</h5>
+							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+						</figcaption><!-- /figcaption -->
+					</figure><!-- /figure -->
+				</div><!-- /grid-mask -->
+			</div><!-- /col -->
 		</div><!-- /row -->
-	</div><!-- /container -->	
+
+		<br>
+		<br>
+	</div><!-- /row -->
+</div><!-- /container -->	
