--- a/_includes/projekte.html
+++ b/_includes/projekte.html
@@ -1,13 +1,12 @@
 <div class="row no-touch" id="projekte" name="projekte">
-	<br>
 	<div class="container lefty">
 			<br>
-			<h1 class="centered">PROJEKTE</h1>
+			<h1 class="left fix-alignment">PROJEKTE</h1>
 			<hr>
 			<br>
 			<br>
 
-		<div class="row">	
+		<div class="row fix-alignment">	
 		
 			<!-- PORTFOLIO IMAGE 1 -->
 			<div class="col-md-4 ">
