--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,12 +8,14 @@
 	{% include topmenu.html %}
 	{% include about_animation.html %}
     <!-- content start -->
-
-    <div class="container">
-      <div class="col-sm-12">
-        {{ content }}
-      </div>
-    </div>
+	
+	<div class="row">
+		<div class="container lefty">
+		  <div class="col-sm-12">
+			{{ content }}
+		  </div>
+		</div>
+	</div>
 
     <!-- content end -->
 
