--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,7 +24,7 @@
 </section>
 <div class="row">
 <div class="container lefty" id="about" name="team">
-			<h1 class="centered">RRETH FAQES</h1>
+			<h1 class="left fix-alignment">RRETH FAQES</h1>
 			<hr>
 			<br>
 			<br>
@@ -39,7 +39,7 @@
 				<a href="https://github.com/GrigorM" target="_blank"><i class="fa fa-github fac"></i></a>
 				<a href="mailto:grigormalo@gmail.com" target="_blank"><i class="fa fa-envelope fac"></i></a>					
 			</div>
-			<div class="col-lg-8 blog-content text-center">
+			<div class="col-lg-8 blog-content text-left">
 				<h2>Lorem Ipsum</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.</p>
