--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer>
     <div class="container lefty">
         <div class="row">
-            <div class="col-md-12 text-center">
+            <div class="col-md-12 text-left">
                 <p class="copyright text-muted">
 					<strong>
 					<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
