--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -53,12 +53,12 @@
 <div id="blog" class="content-section-a">
 		<div class="row">
 			<div class="container lefty">
-				<h1 class="left">POSTIMET E FUNDIT</h1>
+				<h1 class="left fix-alignment">POSTIMET E FUNDIT</h1>
 				<hr>
 				<br>
 	{% for post in site.posts reversed %}
 			<div class="col-lg-12">
-				<div class="container text-left">
+				<div class="text-left">
 				<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 				<p>{{ post.content }}</p>
 				<p>{{ post.category }}</p>
@@ -78,7 +78,7 @@
 				</div>
 			</div>
 			<div class="col-lg-12">			
-				<div class="container text-left">
+				<div class="text-left">
 				<a href="#">Arkiva</a>
 				</div>	
 			</div>	
