--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -1,6 +1,6 @@
 <!-- Navigation -->
-<nav class="navbar navbar-default navbar-fixed-top lefty-menu" role="navigation">
-    <div class="container">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container lefty">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
