--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,5 +25,9 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<!-- p5 libraries, standard, dom and sound -->
+	<script src = "/reclaim/js/p5.min.js"></script>
+	<script src = "/reclaim/js/p5.dom.js"></script>
+	<script src = "/reclaim/js/p5.sound.js"></script>	
 
 </head>
