--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,7 +9,7 @@
     <!-- content start -->
 	
 	<div class="row">
-		<div class="container lefty">
+		<div class="lefty">
 		  <div class="col-sm-6">
 			{{ content }}
 		  </div>
