--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,8 +24,7 @@
 </section>
 <div class="row">
 <div class="container lefty" id="about" name="team">
-			<h1 class="left fix-alignment">RRETH FAQES</h1>
-			<hr>
+			<h1 class="left fix-alignment">RRETH FAQES <span class="gray"> ______________</span></h1>
 			<br>
 			<br>
 		<div class="blog-bg col-lg-10 col-md-10 col-sm-12 col-xs-12">
