--- a/_includes/projekte.html
+++ b/_includes/projekte.html
@@ -1,8 +1,7 @@
 <div class="row no-touch" id="projekte" name="projekte">
 	<div class="container lefty">
 			<br>
-			<h1 class="left fix-alignment">PROJEKTE</h1>
-			<hr>
+			<h1 class="left fix-alignment">PROJEKTE <span class="gray"> ______________</span></h1>
 			<br>
 			<br>
 
