--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -53,8 +53,7 @@
 <div id="blog" class="content-section-a">
 		<div class="row">
 			<div class="container lefty">
-				<h1 class="left fix-alignment">POSTIMET E FUNDIT</h1>
-				<hr>
+				<h1 class="left fix-alignment">POSTIMET E FUNDIT <span class="gray"> ______________</span></h1>
 				<br>
 	{% for post in site.posts reversed %}
 			<div class="col-lg-12">
