--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
-	background-color: #dadada;
+	background-color: #fff; /*#dadada;*/
 }
 
 /*
