--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -50,7 +50,7 @@
     {% endif %}
 {% endfor %}
 </section>
-<div id="blog" class="content-section-a">
+<div id="blog">
 		<div class="row">
 			<div class="container lefty">
 				<h1 class="left fix-alignment">POSTIMET E FUNDIT <span class="gray"> ______________</span></h1>
