--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
 <!-- Header -->
 	<div class="intro-header">
 
-		<div class="container">
+		<div class="container lefty">
 
 			<div class="row">
 				<div class="col-lg-12">
