--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -56,12 +56,9 @@
 				<h1 class="left fix-alignment">POSTIMET E FUNDIT <span class="gray"> ______________</span></h1>
 				<br>
 	{% for post in site.posts reversed %}
-			<div class="col-lg-12">
-				<div class="text-left">
+			<div class="col-lg-12 text-left">
 				<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 				<p>{{ post.content }}</p>
-				<p>{{ post.category }}</p>
-				</div>
 			</div>
 	{% endfor %}		
 			<div class="col-lg-12 hidden">
@@ -76,10 +73,8 @@
 				<p>Lorem ipsum trololo. This is the pre-pre-last blog post.</p>						
 				</div>
 			</div>
-			<div class="col-lg-12">			
-				<div class="text-left">
-				<a href="#">Arkiva</a>
-				</div>	
+			<div class="col-lg-12 text-left">			
+				<a href="#">Arkiva</a>	
 			</div>	
 			</div>		
 		</div><!-- /row -->	
