--- a/_includes/projekte.html
+++ b/_includes/projekte.html
@@ -14,7 +14,7 @@
 						<img class="img-responsive" src="img/portfolio/folio06.jpg" alt="">
 						<figcaption>
 							<h5>PROJECT 1</h5>
-							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
@@ -28,7 +28,7 @@
 						<img class="img-responsive" src="img/portfolio/folio07.jpg" alt="">
 						<figcaption>
 							<h5>PROJECT 2</h5>
-							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
@@ -41,7 +41,7 @@
 						<img class="img-responsive" src="img/portfolio/folio09.jpg" alt="">
 						<figcaption>
 							<h5>PROJECT 3</h5>
-							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
 				</div><!-- /grid-mask -->
