--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,12 @@ border: 0px solid transparent;
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-	background-color: #3498DB;
+	background-color: #2f2f2f;/*#3498DB;*/
+	color: white;
+}
+
+.navbar-header .a:hover { 
+	background-color: #2f2f2f;
 	color: white;
 }
 
@@ -168,7 +173,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Paragraph & Typographic */
 p {
-    line-height: 28px;
+    line-height: 25px;
     margin-bottom: 25px;
 }
 
@@ -650,4 +655,5 @@ a:after {
 .lefty { float: left; }
 .fix-alignment { margin-left:15px; }
 .gray { color: #b7b7b7; } 
+a.icon-link, footer a { color: fff; }
 
