--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,9 +24,8 @@
 </section>
 <div class="row">
 <div class="container lefty" id="about" name="team">
-			<h1 class="left fix-alignment">RRETH FAQES <span class="gray"> ______________</span></h1>
-			<br>
-			<br>
+			<br/>
+			<h2 class="left fix-alignment">RRETH FAQES <span class="gray"> ______________</span></h2>
 		<div class="blog-bg col-lg-10 col-md-10 col-sm-12 col-xs-12">
 			<div class="col-lg-4 centered">
 			<br>
@@ -34,9 +33,9 @@
 				<p><img class="img img-circle" src="img/profile2.jpg" width="120px" height="120px"></p>
 				<h4>Grigor Malo</h4>
 				<h5>Kontakt</h5>
-				<a href="https://twitter.com/grigormalo" target="_blank"><i class="fa fa-twitter fac"></i></a>
-				<a href="https://github.com/GrigorM" target="_blank"><i class="fa fa-github fac"></i></a>
-				<a href="mailto:grigormalo@gmail.com" target="_blank"><i class="fa fa-envelope fac"></i></a>					
+				<a class="w" href="https://twitter.com/grigormalo" target="_blank"><i class="fa fa-twitter fac"></i></a>
+				<a class="w" href="https://github.com/GrigorM" target="_blank"><i class="fa fa-github fac"></i></a>
+				<a class="w" href="mailto:grigormalo@gmail.com" target="_blank"><i class="fa fa-envelope fac"></i></a>					
 			</div>
 			<div class="col-lg-8 blog-content text-left">
 				<h3>Lorem Ipsum</h3>
