--- a/_includes/projekte.html
+++ b/_includes/projekte.html
@@ -1,7 +1,7 @@
 <div class="row no-touch" id="projekte" name="projekte">
 	<br>
 	<div class="container lefty">
-			<h1 class="left fix-alignment">PROJEKTE <span class="gray"> ______________</span></h1>
+			<h2 class="left fix-alignment">PROJEKTE <span class="gray"> ______________</span></h2>
 
 		<div>	
 		
@@ -11,7 +11,7 @@
 					<figure>
 						<img class="img-responsive" src="img/portfolio/folio06.jpg" alt="">
 						<figcaption>
-							<h5>PROJECT 1</h5>
+							<h5>PROJEKT 1</h5>
 							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
@@ -25,7 +25,7 @@
 					<figure>
 						<img class="img-responsive" src="img/portfolio/folio07.jpg" alt="">
 						<figcaption>
-							<h5>PROJECT 2</h5>
+							<h5>PROJEKT 2</h5>
 							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
@@ -38,7 +38,7 @@
 					<figure>
 						<img class="img-responsive" src="img/portfolio/folio09.jpg" alt="">
 						<figcaption>
-							<h5>PROJECT 3</h5>
+							<h5>PROJEKT 3</h5>
 							<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Më shumë</a>
 						</figcaption><!-- /figcaption -->
 					</figure><!-- /figure -->
