--- a/css/main.css
+++ b/css/main.css
@@ -656,5 +656,11 @@ a:after {
 .fix-alignment { margin-left:15px; }
 .gray { color: #b7b7b7; } 
 a.w, footer a { color: #fff; }
-.blog a, a.icon { color: #2f2f2f; }
+a.w:hover, footer a:hover { color: #777777; }
+a.w:focus, footer a:focus { color: #777777; }
+a.w:active, footer a:active { color: #777777; }
+#blog a, a.icon { color: #2f2f2f; }
+#blog a:hover, a.icon:hover { color: #b7b7b7; }
+#blog a:focus, a.icon:focus { color: #b7b7b7; }
+#blog a:active, a.icon:active { color: #b7b7b7; }
 
