--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -75,7 +75,7 @@
 				</div>
 			</div>
 			<div class="col-lg-12 text-left">			
-				<a href="#">Arkiva</a>	
+				<a href="#">Arkiva <i class="fa fa-long-arrow-right"></i></a>	
 			</div>	
 			</div>		
 		</div><!-- /row -->	
