--- a/_includes/js.html
+++ b/_includes/js.html
@@ -7,7 +7,10 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="/reclaim/js/bootstrap.min.js"></script>
 
-<!-- Custom Theme JavaScript -->
+<!-- Custom Theme JavaScript for scrolling-->
 <script src="/reclaim/js/landing-page.js"></script>
+
+<!-- Custom jQuery and js for custom functionalities -->
+<script src="/reclaim/js/custom.js"></script>
 
 
