--- a/_includes/js.html
+++ b/_includes/js.html
@@ -13,4 +13,9 @@
 <!-- Custom jQuery and js for custom functionalities -->
 <script src="/reclaim/js/custom.js"></script>
 
+<!-- p5 libraries, standard, dom and sound -->
+<script src = "/reclaim/js/p5.min.js"></script>
+<script src = "/reclaim/js/p5.dom.js"></script>
+<script src = "/reclaim/js/p5.sound.js"></script>	
+
 
