--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -56,7 +56,7 @@
 			<div class="container lefty">
 				<h2 class="left fix-alignment">POSTIMET E FUNDIT <span class="gray"> ______________</span></h2>
 				<br>
-	{% for post in site.posts reversed %}
+	{% for post in site.posts limit:3 %}
 			<div class="col-lg-12 text-left">
 				<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 				<p>{{ post.content }}</p>
