--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,12 @@
----
----
 <!DOCTYPE html>
 <html>
   {% include head.html %}
   <body itemscope itemtype="http://schema.org/Article">
     {% include header.html %}
-	<h3>Hello hello, testing these blogposts. So mad i can't test it locally, but I'll deal with it somehow.</h3>
+	<div class="container lefty">
+		<h2 class="post-title">{{ page.title }}</h2>
+		{{ content }}
+	</div>
 	{% include footer.html %}
     {% include js.html %}
   </body>
