--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body itemscope itemtype="http://schema.org/Article">
-    {% include header.html %}
+    {% include topmenu.html %}
 	<div class="container lefty">
 		<h2 class="post-title">{{ page.title }}</h2>
 		{{ content }}
