Menu link and js fixes

--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -19,7 +19,7 @@
                     <a class="page-scroll" href="#projekte">Projekte</a>
                 </li>            
                 <li>                    
-					<a class="page-scroll" href="#blog">Blog</a>
+					<a class="page-scroll" href="/reclaim/archive">Blog</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="/reclaim/about">Rreth faqes</a>
