--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -16,13 +16,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">  
             	<li>
-                    <a class="page-scroll" href="#projekte">Projekte</a>
+                    <a class="page-scroll" href="{{site.baseurl}}/projects">Projekte</a>
                 </li>            
                 <li>                    
-					<a class="page-scroll" href="/reclaim/archive">Blog</a>
+					<a class="page-scroll" href="{{site.baseurl}}/archive">Blog</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/reclaim/about">Rreth faqes</a>
+                    <a class="page-scroll" href="{{site.baseurl}}/about">Rreth faqes</a>
                 </li>
             </ul>
         </div>
