--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
 			<!-- Duhet t'i editosh te gjitha linqet dhe includet qe te heqesh /reclaim/ pasi te blesh domainin -->
-            <a class="navbar-brand page-scroll" href="/reclaim/">{{ site.title }}</a>
+            <h1 class="formal-heading"><a class="navbar-brand page-scroll" href="/reclaim/">{{ site.title }}</a></h1>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
