--- a/_layouts/single-project.html
+++ b/_layouts/single-project.html
@@ -2,18 +2,13 @@
 <html>
 	{% include head.html %}
 	<body>
-		<div class="wrapper">
-			{% include topmenu.html %}
-			<div class="row">
-				<div class="lefty">
-				  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		{% include topmenu.html %}
+		<main class="wrapper">
+				  <section class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lefty">
 					{{ content }}
-				  </div>
-				</div>
-				
-			</div>
+				  </section>
 			{% include footer.html %}
 			{% include js.html %}
-		</div>
+		</main>
 	</body>
 </html>
