--- a/css/main.css
+++ b/css/main.css
@@ -669,4 +669,5 @@ a.w:active, footer a:active { color: #777777; }
 
 span#all, span.category-link {cursor:pointer;}
 span#all:hover, span.category-link:hover { text-decoration:underline; color: #b7b7b7; }
+.formal-heading { margin-top:0; }
 
