--- a/css/main.css
+++ b/css/main.css
@@ -670,4 +670,6 @@ a.w:active, footer a:active { color: #777777; }
 span#all, span.category-link {cursor:pointer;}
 span#all:hover, span.category-link:hover { text-decoration:underline; color: #b7b7b7; }
 .formal-heading { margin-top:0; }
+.fit-image { width:100%; }
+.category-sidebar { position: fixed; right: 0; }
 
