--- a/_includes/js.html
+++ b/_includes/js.html
@@ -2,7 +2,7 @@
 <script src="/reclaim/js/jquery-1.11.0.js"></script>
 
 <!-- Plugin JavaScript -->
-    <script src="/reclaim/js/jquery.easing.min.js"></script>
+<script src="/reclaim/js/jquery.easing.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="/reclaim/js/bootstrap.min.js"></script>
@@ -12,6 +12,9 @@
 
 <!-- Custom jQuery and js for custom functionalities -->
 <script src="/reclaim/js/custom.js"></script>
+
+<!-- Modernizer -->
+<script src="/reclaim/js/modernizr.custom.js"></script>
 
 <!-- p5 libraries, standard, dom and sound -->
 <script src = "/reclaim/js/p5.min.js"></script>
