--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <html>
 	{% include head.html %}
 	<body>
+		<h1 class="formal-heading">{{ page.title }}</h1>
 		{% include header.html %}
 		{% include projekte.html %}		
 		{% include page_content.html %}
