--- a/_layouts/single-project.html
+++ b/_layouts/single-project.html
@@ -2,6 +2,7 @@
 <html>
 	{% include head.html %}
 	<body>
+		<h1 class="formal-heading">{{ page.title }}</h1>
 		<main class="wrapper">
 			{% include topmenu.html %}
 			<div class="row">	
