--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -1,5 +1,6 @@
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<h1 class="formal-heading">Navigation menu</h1>
     <div class="container lefty">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
@@ -10,7 +11,7 @@
                 <span class="icon-bar"></span>
             </button>
 			<!-- Duhet t'i editosh te gjitha linqet dhe includet qe te heqesh /reclaim/ pasi te blesh domainin -->
-            <h1 class="formal-heading"><a class="navbar-brand page-scroll" href="/reclaim/">{{ site.title }}</a></h1>
+            <a class="navbar-brand page-scroll" href="/reclaim/">{{ site.title }}</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
