--- a/_layouts/blog-archive.html
+++ b/_layouts/blog-archive.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
   <body>
-	<div class="wrapper">
-	{% include topmenu.html %}
-    <!-- content start -->
-	
-	<div class="row">
-		<div class="lefty">
-		  <div class="col-sm-12">
-			{{ content }}
-		  </div>
+	<h1 class="formal-heading">{{ page.title }}</h1>
+	<main class="wrapper">
+		{% include topmenu.html %}
+		<!-- content start -->		
+		<div class="row">
+				{{ content }}
 		</div>
-		
-	</div>
-
-    <!-- content end -->
-
-    {% include footer.html %}
-    {% include js.html %}
-	</div>
-
+		<!-- content end -->
+		{% include footer.html %}
+		{% include js.html %}
+	</main>
   </body>
-
 </html>
