--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<h1 class="formal-heading">Navigation menu</h1>
     <div class="container lefty">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
