--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -33,9 +33,12 @@
 				<p><img class="img img-circle" src="img/profile2.jpg" width="120px" height="120px"></p>
 				<h4>Grigor Malo</h4>
 				<h5>Kontakt</h5>
-				<a class="w" href="https://twitter.com/grigormalo" target="_blank"><i class="fa fa-twitter fac"></i></a>
+				{% for social in site.social %}
+					<a href="{{ social.url }}" class="w"><i class="fa fa-{{ social.title }} fac"></i></a>
+				{% endfor %}				
+				<!--<a class="w" href="https://twitter.com/grigormalo" target="_blank"><i class="fa fa-twitter fac"></i></a>
 				<a class="w" href="https://github.com/GrigorM" target="_blank"><i class="fa fa-github fac"></i></a>
-				<a class="w" href="mailto:grigormalo@gmail.com" target="_blank"><i class="fa fa-envelope fac"></i></a>					
+				<a class="w" href="mailto:grigormalo@gmail.com" target="_blank"><i class="fa fa-envelope fac"></i></a>					-->
 			</div>
 			<div class="col-lg-8 blog-content text-left">
 				<h3>Lorem Ipsum</h3>
