Social updates fix

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -34,7 +34,7 @@
 				<h4>Grigor Malo</h4>
 				<h5>Kontakt</h5>
 				{% for social in site.social %}
-					<a href="{{ social.url }}" class="w"><i class="fa fa-{{ social.title }} fac"></i></a>
+					<a href="{{ social.url }}" class="w"><i class="fa fa-{{ social.icon }} fac"></i></a>
 				{% endfor %}				
 				<!--<a class="w" href="https://twitter.com/grigormalo" target="_blank"><i class="fa fa-twitter fac"></i></a>
 				<a class="w" href="https://github.com/GrigorM" target="_blank"><i class="fa fa-github fac"></i></a>
