--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 <br/>
 <br/>
 <footer>
-    <div class="container lefty">
+    <div class="fix-alignment lefty">
         <div class="row">
             <div class="col-md-12 text-left">
                 <p class="copyright text-muted">
@@ -15,5 +15,12 @@
             </div>
         </div>
     </div>
+	<div class="contact">
+		<div class="col-md-12 text-left">
+			<p class="social-icons">
+				Contact;
+			</p>
+		</div>
+	</div>
 </footer>
 </div> <!-- end .wrapper -->
