Front page canvas

--- a/_layouts/old_layout.html
+++ b/_layouts/old_layout.html
@@ -4,7 +4,11 @@
 	{% include head.html %}
 	<body>
 		<h1 class="formal-heading">{{ page.title }}</h1>
-		{{ content }}
+		{% include header.html %}
+		{% include projekte.html %}		
+		{% include page_content.html %}
+		{% include contact.html %}
+		{% include footer.html %}
 		{% include js.html %}
 	</body>
 </html>
