--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,8 +17,8 @@
     </div>
 	<div class="contact">
 		<div class="col-md-12 text-left">
-			<p class="social-icons">
-				Contact;
+			<p class="copyright">
+				<a href="/reclaim/about">Contact;</a>
 			</p>
 		</div>
 	</div>
