Comments for my site

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@
 		<h2 class="post-title">{{ page.title }}</h2>
 		<br/>
 		{{ content }}
+		{% include comment_template.html %}
 	</div>
 	{% include footer.html %}
     {% include js.html %}
