--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,17 @@
 <html>
   {% include head.html %}
   <body itemscope itemtype="http://schema.org/Article">
-    {% include topmenu.html %}
-	<div class="container lefty">
+	<main class="wrapper">
+		{% include topmenu.html %}
 		<br/>
 		<br/>
-		<h2 class="post-title">{{ page.title }}</h2>
-		<br/>
-		{{ content }}
-	</div>
-	{% include footer.html %}
-    {% include js.html %}
+		<section class="col-lg-9 col-md-9 col-sm-9 col-xs-12 lefty">
+			<h2 class="post-title">{{ page.title }}</h2>
+			<br/>
+			{{ content }}
+		</section>
+		{% include footer.html %}
+		{% include js.html %}
+	</main>
   </body>
 </html>
