--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,18 @@
 <html>
   {% include head.html %}
   <body itemscope itemtype="http://schema.org/Article">
+	<h1 class="formal-heading">Dissinovate - Blog</h1>
 	<main class="wrapper">
 		{% include topmenu.html %}
-		<br/>
-		<br/>
-		<section class="col-lg-9 col-md-9 col-sm-9 col-xs-12 lefty">
-			<h2 class="post-title">{{ page.title }}</h2>
+		<div class="row">
 			<br/>
-			{{ content }}
-		</section>
+			<br/>
+			<section class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lefty">
+				<h2 class="post-title fix-alignment">{{ page.title }}</h2>
+				<br/>
+				{{ content }}
+			</section>
+		</div>
 		{% include footer.html %}
 		{% include js.html %}
 	</main>
