--- a/css/main.css
+++ b/css/main.css
@@ -149,9 +149,9 @@ hr:before {
     content: " ";
     position: absolute;
     top: 0;
-    left: 25%;
+    left: 0;
     width: 50%;
-    height: 2px;
+    height: 1px;
     background: #ccc;
 }
 
